# integracao-fiorilli-ahgora

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  justfile  llms.txt  logfile  main.py  pyproject.toml  temp.csv  verify_registry.py
.github/workflows/: release.yml
app/: main.py
app/api/: endpoints.py
app/core/: config.py  constants.json  database.py  department_to_location.csv  file_manager.py  logging.py  scheduler.py  security.py  settings.py  task_registry.py
app/domain/: entities.py  enums.py
app/services/: credential_crypto.py  crypto_service.py  leave_sync_service.py  sync_service.py  task_execution_service.py  transport_crypto.py
data/: absence_codes.csv
data/mappings/: .gitignore  constants.json  exceptions_and_typos.json  leave_codes.csv
docs/: PLAN.md
pgdata/global/: 1260  1262  2671  2672  config_exec_params  pg_control
pgdata/pg_stat/: pgstat.stat
src/: justfile
src/browsers/: ahgora_browser.py  core_browser.py  fiorilli_browser.py
src/managers/: data_manager.py  download_manager.py  file_manager.py  task_manager.py  update_manager.py
src/models/: dataframe.py  key.py  task.py
src/tasks/: add_absences_task.py  add_employees_task.py  add_leaves_task.py  missing_vars_task.py  remove_employees_task.py  task_runner.py  update_employees_task.py
src/utils/: config.py  constants.py  creds.py  ui.py  version.py
tests/: test_ahgora_download.py  test_api.py  test_credentials.py  test_imports.py  test_leave_sync_service.py  test_sync_analysis.py  test_sync_service.py
(+50 files in other folders)
